--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,7 @@
-REACT_APP_AUTH0_DOMAIN=lmdeveloper.eu.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=s50CD0airRSHBhRKTIkpzpd9YRK5plHv
+REACT_APP_FIREBASE_API_KEY=AIzaSyDnsHnXHtNULrbDmMFXwHQLCdf1bFaqm0E
+REACT_APP_AUTH_DOMAIN=sitebuild-d6f74.firebaseapp.com
+REACT_APP_PROJECT_ID=sitebuild-d6f74
+REACT_APP_STORAGE_BUCKET=sitebuild-d6f74.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=273650891792
+REACT_APP_APP_ID=1:273650891792:web:ba22ac10d69899e5671e95
+REACT_APP_MEASUREMENT_ID=G-Z4WX4RDRT9
