Firebase signup working

--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,8 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyDnsHnXHtNULrbDmMFXwHQLCdf1bFaqm0E
-REACT_APP_AUTH_DOMAIN=sitebuild-d6f74.firebaseapp.com
-REACT_APP_PROJECT_ID=sitebuild-d6f74
-REACT_APP_STORAGE_BUCKET=sitebuild-d6f74.appspot.com
-REACT_APP_MESSAGING_SENDER_ID=273650891792
-REACT_APP_APP_ID=1:273650891792:web:ba22ac10d69899e5671e95
-REACT_APP_MEASUREMENT_ID=G-Z4WX4RDRT9
+REACT_APP_FIREBASE_API_KEY=AIzaSyAH6SMuG4zUiNTb2XY5n8lb989dZ6Wx_Vk
+REACT_APP_AUTH_DOMAIN=sitebuilder-66d12.firebaseapp.com
+REACT_APP_DATABASE_URL=https://sitebuilder-66d12.firebaseio.com
+REACT_APP_PROJECT_ID=sitebuilder-66d12
+REACT_APP_STORAGE_BUCKET=sitebuilder-66d12.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=796877794780
+REACT_APP_APP_ID=1:796877794780:web:9dce1e32f1535430ccb319
+REACT_APP_MEASUREMENT_ID=G-QSK9317SXT
